--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "ionic3-prp",
     "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
+    "author": "Robson Lima",
+    "homepage": "http://robsonlima.com.br/",
     "private": true,
     "scripts": {
         "clean": "ionic-app-scripts clean",
@@ -45,7 +45,7 @@
         "ionic": "3.6.0",
         "typescript": "2.3.4"
     },
-    "description": "An Ionic project",
+    "description": "",
     "cordova": {
         "plugins": {
             "cordova-plugin-console": {},
